- fixed phpstan errors - add codeception bootstrap file - add php8 to CI matrix - ...

--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=7.3",
     "jaybizzle/crawler-detect": "1.2.64",
-    "sinergi/browser-detector": "6.1.4"
+    "sinergi/browser-detector": "6.1.4",
+    "spryker/router": "^1.0.0",
+    "spryker/router-extension": "^1.0.0",
+    "spryker/store": "^1.12.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "^0.17.14",
-    "codeception/codeception": "^5.0.0",
-    "mikey179/vfsstream": "^1.6",
-    "phpro/grumphp": "^v1.14.0",
-    "sebastian/phpcpd": "^6.0.0",
-    "php-coveralls/php-coveralls": "^2.0"
+    "fond-of-codeception/spryker": "^1.0",
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -30,7 +30,9 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "FondOfSpryker\\": "tests/FondOfSpryker/"
+      "FondOfSpryker\\": "tests/FondOfSpryker/",
+      "Generated\\": "src/Generated/",
+      "Orm\\Zed\\": "src/Orm/Zed/"
     }
   },
   "config": {
