--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
   ],
   "require": {
     "php": ">=7.3",
-    "jaybizzle/crawler-detect": "1.2.64",
-    "sinergi/browser-detector": "6.1.4",
+    "jaybizzle/crawler-detect": "^1.2.0",
+    "sinergi/browser-detector": "^6.1.0",
     "spryker/router": "^1.0.0",
     "spryker/router-extension": "^1.0.0",
     "spryker/store": "^1.12.0"
